...
                  child: FutureBuilder<List<String>>(
                    future: widget.qApi.generateHomeSuggestions(http.Client()),
                    builder: (context, snapshot) {
                      if (snapshot.hasData) {
                        return Swiper(
                          itemBuilder: (BuildContext context, int index) {
                            if (snapshot.data![index] == 'RANDOM') {
                              return SliderCard(cols: [
                                Color.fromARGB(255, 128, 5, 195),
                                Color.fromARGB(255, 182, 80, 245),
                              ], icon: Icons.question_mark_rounded, text: 'RANDOM QUIZ', isListening: 0);
                            } else if (snapshot.data![index] == 'LISTENING') {
                              return SliderCard(cols: [
                                Color.fromARGB(255, 5, 56, 195),
                                Color.fromARGB(255, 80, 121, 245),
                              ], icon: Icons.music_note_rounded, text: 'LISTENING QUIZ', isListening: 1);
                            } else {
                              return SliderCard(cols: [
...
                    ],
                  ),
                  Column(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      InkWell(
                        key: Key('Person'),
                        onTap: () {
                          Navigator.of(context).push(MaterialPageRoute(builder: (context) => UserPage()));
                        },
                        child: Container(
                          height: queryData.size.height * 0.2,
                          width: queryData.size.width * 0.4,
...
                                )),
                          ),
                        ),
                      ),
                      Padding(padding: EdgeInsets.symmetric(vertical: 10)),
                      InkWell(
                        key: Key('Leaderboard'),
                        onTap: () {
                          Navigator.of(context).push(MaterialPageRoute(builder: (context) => UserPage()));
                        },
                        child: Container(
                          height: queryData.size.height * 0.2,
                          width: queryData.size.width * 0.4,
...
