...
                                ],
                                icon: Icons.music_note_rounded,
                                text: 'LISTENING QUIZ',
                                isListening: 1);
                          } else {
                            return SliderCard(
                                key: Key('SILENT'),
                                cols: [
                                  Color.fromARGB(255, 195, 56, 5),
                                  Color.fromARGB(255, 245, 108, 80),
                                ],
                                icon: Icons.notifications_off_rounded,
                                text: 'SILENT QUIZ',
...
